@startuml restaurant

class Restaurant {
  -long id
  -double minimumOrderFee
  -String name
  -String email
  -String telephoneNumber
  -String webSite
  -Address address
  -RestaurantCategory category
  -List<Dish> dailyMenu
  --
  +Restaurant() 
  +Restaurant(String name)
  +Restaurant(String name, RestaurantCategory category, 
  \t           double minimumOrderFee )
  ..
  getters and setters
}

class Address {
    -String country
    -String city
    -String province
    -String street
    -String number
    -String zip
    --
    +Address()
    +Address(String country, String city,
\t       String province, String number, String zip)
   ..
   getters and setters
}

enum RestaurantCategory {
    CHINESE("Cinese")
    ITALIAN("Italiano")
    JAPANESE("Giapponese")
    HAMBURGER("Hamburger")
    SANDWICHES("Panini")
    PIZZA("Pizza")
    SUSHI("Sushi")
    SWEET("Dolci")
    -String displayValue
    --
    -RestaurantCategory(String displayValue)
    +String getDisplayValue()
}

Address *-- Restaurant
RestaurantCategory *-- Restaurant

@enduml